force-app/main/default/objects/Curadoria__c/Curadoria__c.object-meta.xml
<CustomObject>
    <label>Curadoria</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curadoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>