force-app/main/default/objects/Curadoria__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oportunidade aberta varejo</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Pré-checagem</fullName>
            </value>
            <value>
                <fullName>Concluido</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>Troca de celebridade</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Perdido varejo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>