force-app/main/default/objects/Curadoria__c/fields/FaseAnterior__c.field-meta.xml
<CustomField>
    <fullName>FaseAnterior__c</fullName>
    <label>Fase Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>